add instruction to make zip file